fix: overflow of elements

--- a/styles/AppointmentModal.module.css
+++ b/styles/AppointmentModal.module.css
@@ -7,11 +7,11 @@
 }
 
 .modal > h2 {
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-    padding: 20px;
-    width: 100%;
-    text-align: center;
-    z-index: 2;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  padding: 20px;
+  width: 100%;
+  text-align: center;
+  z-index: 2;
 }
 
 .dateTimeSection {
@@ -22,7 +22,7 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-evenly;
-  margin-top: 20px;
+  overflow-y: auto;
 }
 
 .calendar {
@@ -90,7 +90,7 @@
 }
 
 .label {
-    width: 80%;
+  width: 80%;
   display: block;
   font-weight: bold;
   margin: 0 auto 5px;
@@ -98,8 +98,8 @@
 
 .input {
   display: block;
-    width: 80%;
-    margin: 10px auto 30px;
+  width: 80%;
+  margin: 10px auto 30px;
   padding: 8px;
   font-size: 16px;
   border: 1px solid #ccc;
@@ -116,6 +116,7 @@
   align-items: flex-start;
   width: 80%;
   max-width: 1000px;
+  overflow-y: auto;
 }
 
 .review > p {
@@ -123,27 +124,26 @@
 }
 
 .buttonContainerSingle {
-    width: 100%;
-    display: flex;
-    justify-content: flex-end;
-    margin-top: 20px;
-    padding: 20px;
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+  padding: 20px;
 }
 
 .buttonContainer {
   width: 100%;
   display: flex;
   justify-content: space-between;
-    padding: 20px;
+  padding: 20px;
 }
 
 .buttonContainerSingle,
 .buttonContainer {
   width: 100%;
   display: flex;
-    justify-content: space-between;
-    padding: 20px;
-    box-shadow: 0 -8px 6px rgba(0, 0, 0, 0.1);
+  justify-content: space-between;
+  padding: 20px;
+  box-shadow: 0 -8px 6px rgba(0, 0, 0, 0.1);
 }
 
 .buttonLeft,
